...
                                                                </connections>
                                                            </textField>
                                                        </subviews>
                                                    </stackView>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C6u-C5-aCh">
                                                        <rect key="frame" x="0.0" y="196" width="315" height="30"/>
                                                        <state key="normal" title="Buy with Affirm"/>
                                                        <connections>
                                                            <action selector="checkoutWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="80P-Ql-dz5"/>
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JXZ-7f-sEo">
                                                        <rect key="frame" x="0.0" y="241" width="315" height="30"/>
...
                                                        <connections>
                                                            <action selector="showFailedCheckoutWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kBU-Sj-yEI"/>
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BCw-Ab-2LL">
                                                        <rect key="frame" x="0.0" y="286" width="315" height="30"/>
                                                        <state key="normal" title="VCN Checkout"/>
                                                        <connections>
                                                            <action selector="vcnCheckoutWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uwq-lN-GAW"/>
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ACl-Ue-YsN">
                                                        <rect key="frame" x="0.0" y="331" width="315" height="30"/>
...
                                                        <connections>
                                                            <action selector="trackOrderConfirmationWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SeX-BK-OTu"/>
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B7c-6q-jWr">
                                                        <rect key="frame" x="0.0" y="376" width="315" height="30"/>
                                                        <state key="normal" title="Clear Cookies"/>
                                                        <connections>
                                                            <action selector="clearCookiesWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sZw-Js-AUa"/>
                                                        </connections>
                                                    </button>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Checkout result: " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rzb-hq-GB
                                                        <rect key="frame" x="0.0" y="421" width="315" height="20.5"/>
...
