...
        let order = AffirmOrder(storeName: "Affirm Store", checkoutId: nil, coupon: "SUMMER2018", currency: "USD", discount: .zero, orderId: "T12345", paymentMethod: "Visa", revenue: NSDecimalNumber(string: "2920"), shipping: NSDecimalNumber(string: "534"), shippingMethod: "Fedex", tax: NSDecimalNumber(string: "285"), total: NSDecimalNumber(string: "3739"))
        let product0 = AffirmProduct(brand: "Affirm", category: "Apparel", coupon: "SUMMER2018", name: "Affirm T-Shirt", price: NSDecimalNumber(string: "730"), productId: "SKU-1234", quantity: 1, variant: "Black", currency: nil)
        let product1 = AffirmProduct(brand: "Affirm", category: "Apparel", coupon: "SUMMER2018", name: "Affirm Turtleneck Sweater", price: NSDecimalNumber(string: "2190"), productId: "SKU-5678", quantity: 1, variant: "Black", currency: nil)
        AffirmOrderTrackerViewController.track(order: order, products: [product0, product1])

        let alertController = UIAlertController(title: nil, message: "Track successfully", preferredStyle: .alert)
        alertController.addAction(UIAlertAction(title: "OK", style: .cancel))
        present(alertController, animated: true, completion: nil)
    }

    @IBAction func clearCookies(sender: UIButton) {
        AffirmConfiguration.deleteAffirmCookies()
        configurPromotionalMessage()
...

extension ViewController: AffirmPrequalDelegate {

    func webViewController(_ webViewController: AffirmBaseWebViewController?, didFailWithError error: Error) {
        print("Prequal failed with error: \(error.localizedDescription)")
        if let webViewController = webViewController {
            let alertController = UIAlertController(title: "Error", message: error.localizedDescription, preferredStyle: .alert)
            alertController.addAction(UIAlertAction(title: "OK", style: .default, handler: { action in
                webViewController.dismiss(animated: true, completion: nil)
            }))
            webViewController.present(alertController, animated: true, completion: nil)
        }
    }
...
